# grapheme_to_phoneme.rs

./: Cargo.toml  LICENSE  README.md
model/: dec_b_hh.npy  dec_b_ih.npy  dec_emb.npy  dec_w_hh.npy  dec_w_ih.npy  enc_b_hh.npy  enc_b_ih.npy  enc_emb.npy  enc_w_hh.npy  enc_w_ih.npy  fc_b.npy  fc_w.npy  model.npz
reference/: README.md
src/: lib.rs  tables.rs
