[package]
name = "grapheme_to_phoneme"
description = "A library for building text to speech applications. Turns graphemes into phonemes."
edition = "2018"
version = "0.0.1"
keywords = [ "grapheme", "phoneme", "TTS", "speech", "arpabet" ]
authors = [
  "Brandon Thomas <bt@brand.io>",
  "Brandon Thomas <echelon@gmail.com>",
]
license = "BSD-4-Clause"
repository = "https://github.com/echelon/grapheme_to_phoneme.rs"
documentation = "https://docs.rs/grapheme_to_phoneme"

[dependencies]
ndarray = "0.13.1"
ndarray-npy = "0.5.0"

[badges]
travis-ci = { repository = "echelon/grapheme_to_phoneme.rs" }

